--- a/bibliografie.bib
+++ b/bibliografie.bib
@@ -254,8 +254,6 @@
     note = {\url{https://otexts.org/fpp2/stationarity.html}, Accessed January 2019},
 }
 
-
-
 @article{adftest,
     author = { David A.   Dickey  and  Wayne A.   Fuller },
     title = {Distribution of the Estimators for Autoregressive Time Series with a Unit Root},
@@ -313,3 +311,53 @@
     date = {2005},
     note = {\url{http://web.econ.ku.dk/metrics/Econometrics2_05_II/Slides/08_unitroottests_2pp.pdf}, Accessed January 2019},
 }
+
+@Misc{fpp2transformations,
+    author = {Rob J Hyndman and George Athanasopoulos},
+    title = {Transformations and adjustments},
+    date = {December 2018},
+    note = {\url{https://otexts.org/fpp2/transformations.html}, Accessed January 2019},
+}
+
+@article{pearson1895note,
+    author = {Pearson, Karl},
+    journal = {Proceedings of the Royal Society of London},
+    pages = {240--242},
+    publisher = {JSTOR},
+    title = {Note on regression and inheritance in the case of two parents},
+    volume = 58,
+    year = 1895
+}
+
+@article{stiglercorrelationgalton,
+    author = {M. Stigler, Stephen},
+    year = {1989},
+    month = {05},
+    pages = {},
+    title = {Francis {G}alton's Account of the Invention of Correlation},
+    volume = {4},
+    journal = {Statistical Science},
+    doi = {10.1214/ss/1177012580}
+}
+
+@Misc{nauregression,
+    author = {Robert Nau},
+    title = {Notes on linear regression analysis},
+    date = {June 2018},
+    note = {\url{https://people.duke.edu/~rnau/Notes_on_linear_regression_analysis--Robert_Nau.pdf}, Accessed January 2019},
+}
+
+@article{hyndman2015acf,
+    author = "Hyndman, Rob J.",
+    doi = "10.1214/14-EJS953",
+    fjournal = "Electronic Journal of Statistics",
+    journal = "Electron. J. Statist.",
+    number = "1",
+    pages = "792--796",
+    publisher = "The Institute of Mathematical Statistics and the Bernoulli Society",
+    title = "Discussion of “High-dimensional autocovariance matrices and optimal linear prediction”",
+    url = "https://doi.org/10.1214/14-EJS953",
+    volume = "9",
+    year = "2015"
+}
+
